Fix syscall table